--- a/documentation/index.html
+++ b/documentation/index.html
@@ -143,15 +143,15 @@
 <h3>Example</h3>
 
 <pre class="brush: javascript">
-	<%@ Register TagPrefix="spx" Namespace="SuperScript.JavaScript.WebForms.Containers" Assembly="SuperScript.JavaScript.WebForms" %>
+	&lt;%@ Register TagPrefix="spx" Namespace="SuperScript.JavaScript.WebForms.Containers" Assembly="SuperScript.JavaScript.WebForms" %&gt;
 	&#10;
-	<spx:JavaScriptContainer runat="server" EmitterKey="javascript" InsertAt="0">
+	&lt;spx:JavaScriptContainer runat="server" EmitterKey="javascript" InsertAt="0"&gt;
 		&lt;script type="text/javascript"&gt;
 		
 			var demoVar = "hello world";
 		
 		&lt;/script&gt;
-	</spx:JavaScriptContainer>
+	&lt;/spx:JavaScriptContainer&gt;
 </pre>
 
 <p>
