--- a/documentation/index.html
+++ b/documentation/index.html
@@ -33,7 +33,7 @@
 <p>
 	The <abbr title="SuperScript.JavaScript.WebForms.Containers.JavaScriptContainer"><code>JavaScriptContainer</code></abbr>
 	control does not expose any public methods. However, understanding what the internal methods do may help understand the
-	process which takes place
+	process which takes place.
 </p>
 
 <table class="table table-bordered">
